--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -11,14 +11,14 @@
   <Window.Background>
     <ImageBrush Source="avares://MAMEIronXP/Assets/MAMEIronXPCabinetV2.png" AlignmentX="Left" AlignmentY="Top"/>
   </Window.Background>
-  <StackPanel HorizontalAlignment="Right" Margin="150">
-    <!-- There's an issue with the ListBox where you scroll down the game list and hit the last item...
-    What it *should* do is keep scrolling so you can get to the other games. What it sometimes does is cycle back
-    up to the top of the list. I've narrowd the issue down to the "Height" property on the ListBox. So that's something that'll need to get looked at -->
-    <ListBox x:Name="GamesListBox" Width="1100" Height="1100" CornerRadius="25" >
+  <StackPanel HorizontalAlignment="Right">    
+    <ListBox x:Name="GamesListBox">
       <ListBox.ItemTemplate>
         <DataTemplate>
-          <TextBlock Text="{Binding Description}" FontSize="48" FontFamily="Arcade" />
+          <StackPanel Orientation="Horizontal">
+            <TextBlock Text="{Binding IsFavorite}" FontFamily="Pacfont Good" />
+            <TextBlock Text="{Binding Description}" FontFamily="Arcade" />
+          </StackPanel>
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
