Load game images from disk and display them on screen (rudimentary implementation currently)

--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -22,5 +22,6 @@
         </DataTemplate>
       </ListBox.ItemTemplate>
     </ListBox>
-  </StackPanel>
+    <Image Name="MyImage"/>
+  </StackPanel>  
 </Window>
