--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -34,6 +34,9 @@
       <Panel ZIndex="10">
         <Image Source="avares://MAMEIronXP/Assets/MAMEIronXPCabinetV2.png" />
       </Panel>
+      <Panel ZIndex="40" HorizontalAlignment="Left" VerticalAlignment="Bottom">
+        <TextBox x:Name="GameMetadata" FontFamily="Arcade" FontSize="24"></TextBox>
+      </Panel>
     </Panel>
   </Panel>
 </Window>
