Fixed Focus issue. Also display snapshot/metadata on load.

--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -7,7 +7,8 @@
         WindowState="FullScreen"
         Cursor="None"
         x:Class="MAMEIronXP.MainWindow"
-        Title="MAMEIronXP" Background="Black">
+        Title="MAMEIronXP" Background="Black"
+        Loaded="MainWindow_Loaded">
   <Window.Resources>
     <local:IsFavoriteConverter x:Key="isFavoriteConverter"/>
   </Window.Resources>
@@ -29,7 +30,7 @@
         <Image Name="GameSnapshot" />
       </Panel>
       <Panel ZIndex="40" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0">
-        <TextBox x:Name="GameMetadata" FontFamily="Arcade" FontSize="24"></TextBox>
+        <TextBox x:Name="GameMetadata" FontFamily="Arcade" FontSize="24" Focusable="False"></TextBox>
       </Panel>
       <Panel ZIndex="40" Grid.Row="0" Grid.Column="1">
         <Grid ShowGridLines="false" ColumnDefinitions="*,*,*,*,*,*,*,*,*,*" RowDefinitions="*,*,*,*,*,*,*,*,*,*">
@@ -37,7 +38,7 @@
             <Image Source="avares://MAMEIronXP/Assets/MAMEIronXPTitle.png" />
           </Panel>
           <Panel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="8" Grid.RowSpan="8">
-            <ListBox x:Name="GamesListBox" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+            <ListBox x:Name="GamesListBox" ScrollViewer.VerticalScrollBarVisibility="Hidden" Focusable="True">
                 <ListBox.ItemTemplate>
                 <DataTemplate>
                   <StackPanel Orientation="Horizontal">
