--- a/ExitWindow.axaml
+++ b/ExitWindow.axaml
@@ -2,12 +2,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-        WindowState="FullScreen"
+        mc:Ignorable="d" d:DesignWidth="400" d:DesignHeight="250"
         Cursor="None"
         x:Class="MAMEIronXP.ExitWindow"
-        Title="ExitWindow">
-  <ListBox x:Name="ExitListBox" Width="200" Height="125">
+        Title="ExitWindow"
+        WindowState="FullScreen"
+        Opacity="100"
+        TransparencyBackgroundFallback="Black"
+        Background="Black"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center"
+        Loaded="ExitWindow_Loaded">
+  <ListBox x:Name="ExitListBox" Width="175" Height="125" Focusable="True" CornerRadius="5" Opacity="100">
     
   </ListBox>
 </Window>
