--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -26,11 +26,11 @@
       <Panel ZIndex="30" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2">
         <Image Source="avares://MAMEIronXP/Assets/MAMEIronXPCabinetV3.png"  />
       </Panel>
-      <Panel ZIndex="20" Grid.Row="0" Grid.Column="0">
-        <Image Name="GameSnapshot" />
+      <Panel ZIndex="20" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="550,350,0,0" >
+          <Image Name="GameSnapshot" Width="400"/>
       </Panel>
-      <Panel ZIndex="40" HorizontalAlignment="Left" VerticalAlignment="Bottom" Grid.Row="0" Grid.Column="0">
-        <TextBox x:Name="GameMetadata" FontFamily="Arcade" FontSize="24" Focusable="False"></TextBox>
+      <Panel ZIndex="40" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="460,810,0,0">
+        <TextBox x:Name="GameMetadata" FontFamily="Arcade" FontSize="22" Focusable="False" Width="580" Background="YellowGreen" Opacity="50"></TextBox>
       </Panel>
       <Panel ZIndex="40" Grid.Row="0" Grid.Column="1">
         <Grid ShowGridLines="false" ColumnDefinitions="*,*,*,*,*,*,*,*,*,*" RowDefinitions="*,*,*,*,*,*,*,*,*,*">
@@ -38,8 +38,8 @@
             <Image Source="avares://MAMEIronXP/Assets/MAMEIronXPTitle.png" />
           </Panel>
           <Panel Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="8" Grid.RowSpan="8">
-            <ListBox x:Name="GamesListBox" ScrollViewer.VerticalScrollBarVisibility="Hidden" Focusable="True">
-                <ListBox.ItemTemplate>
+            <ListBox x:Name="GamesListBox" ScrollViewer.VerticalScrollBarVisibility="Hidden" Focusable="True" CornerRadius="25" >
+              <ListBox.ItemTemplate>
                 <DataTemplate>
                   <StackPanel Orientation="Horizontal">
                     <Image IsVisible="{Binding IsFavorite}"  Width="50" Height="50" Source="avares://MAMEIronXP/Assets/MAMEIronXPFavorite.png" ></Image>
