--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -30,7 +30,7 @@
           <Image Name="GameSnapshot" Width="400"/>
       </Panel>
       <Panel ZIndex="40" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="460,810,0,0">
-        <TextBox x:Name="GameMetadata"  FontSize="22" Focusable="False" Width="580" Background="YellowGreen" Opacity="50"></TextBox> <!--FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#"-->
+        <TextBox x:Name="GameMetadata"  FontSize="22" Focusable="False" Width="580" Background="YellowGreen" FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#" Opacity="50"></TextBox>
       </Panel>
       <Panel ZIndex="40" Grid.Row="0" Grid.Column="1">
         <Grid ShowGridLines="false" ColumnDefinitions="*,*,*,*,*,*,*,*,*,*" RowDefinitions="*,*,*,*,*,*,*,*,*,*">
@@ -44,7 +44,7 @@
                   <StackPanel Orientation="Horizontal">
                     <Image IsVisible="{Binding IsFavorite}"  Width="50" Height="50" Source="avares://MAMEIronXP/Assets/MAMEIronXPFavorite.png" ></Image>
                     <Image IsVisible="{Binding !IsFavorite}" Width="50" Height="50" Source=""></Image>
-                    <TextBlock Text="{Binding Description}" x:Name="GameTextBlock" FontSize="36" Height="35" /> <!--FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#"  -->
+                    <TextBlock Text="{Binding Description}" x:Name="GameTextBlock" FontSize="36" Height="35" FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#" />
                   </StackPanel>
                 </DataTemplate>
               </ListBox.ItemTemplate>
