--- a/ExitWindow.axaml
+++ b/ExitWindow.axaml
@@ -13,6 +13,13 @@
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
         Loaded="ExitWindow_Loaded">
-  <ListBox x:Name="ExitListBox" Width="200" Height="110" Focusable="True" CornerRadius="5"  Opacity="100" FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#" FontSize="96" >
+  <ListBox x:Name="ExitListBox" Width="420" Height="175" Focusable="True" CornerRadius="5"  Opacity="100" FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#" >
+    <ListBox.ItemTemplate>
+      <DataTemplate>
+        <StackPanel Orientation="Vertical">
+          <TextBlock Text="{Binding}" FontSize="36" />
+        </StackPanel>
+      </DataTemplate>
+    </ListBox.ItemTemplate>
   </ListBox>
 </Window>
