--- a/ExitWindow.axaml
+++ b/ExitWindow.axaml
@@ -13,7 +13,7 @@
         HorizontalAlignment="Center"
         VerticalAlignment="Center"
         Loaded="ExitWindow_Loaded">
-  <ListBox x:Name="ExitListBox" Width="425" Height="175" Focusable="True" CornerRadius="5"  Opacity="100" FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#" >
+  <ListBox x:Name="ExitListBox" Width="425" Height="175" Focusable="True" CornerRadius="5" Opacity="100" FontFamily="avares://MAMEIronXP/Assets/Arcade.ttf#" Background="#F2F2F2" Foreground="Black">
     <ListBox.ItemTemplate>
       <DataTemplate>
         <StackPanel Orientation="Vertical">
