Switch the way that Fonts are used. This is required so we can move from Avalonia 11.1.x --> 11.2.0

--- a/App.axaml
+++ b/App.axaml
@@ -4,4 +4,7 @@
     <Application.Styles>
         <FluentTheme />
     </Application.Styles>
+  <Application.Resources>
+    <FontFamily x:Key="ArcadeFont">avares://MAMEIronXP/Assets/Arcade.ttf#Arcade</FontFamily>
+  </Application.Resources>
 </Application>
